[package]
name = "ethash"
description = "An Apache-licensed Ethash implementation."
version = "0.4.0"
authors = ["Wei Tang <hi@that.world>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
ethereum-types = { version = "0.12", default-features = false }
primitive-types = { version = "0.10", default-features = false, features = [
  "rlp",
] }
rlp = { version = "0.5", default-features = false }
byteorder = { version = "1", default-features = false }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
hex-literal = "0.3"
