[package]
name = "ethash"
description = "An Apache-licensed Ethash implementation."
version = "0.4.0"
authors = ["Wei Tang <hi@that.world>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
bytes = "1"
ethereum-types = { version = "0.13", default-features = false }
ethnum = { version = "1", default-features = false }
primitive-types = { version = "0.11", default-features = false, features = [
  "rlp",
] }
fastrlp = { version = "0.1", default-features = false }
byteorder = { version = "1", default-features = false }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
hex-literal = "0.3"
